infra/dms-large/compose/teedy-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/ssm-user/kompose -f docker-compose.yaml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: teedy-server
  name: teedy-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: teedy-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /home/ssm-user/kompose -f docker-compose.yaml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-internal: "true"
        io.kompose.network/internet: "true"
        io.kompose.service: teedy-server
    spec:
      containers:
        - env:
            - name: DATABASE_PASSWORD
              value: teedy_db_password
            - name: DATABASE_URL
              value: jdbc:postgresql://teedy-db:5432/teedy
            - name: DATABASE_USER
              value: teedy_db_user
            - name: DOCS_ADMIN_EMAIL_INIT
              value: admin@example.com
            - name: DOCS_ADMIN_PASSWORD_INIT
              value: $2a$05$PcMNUbJvsk7QHFSfEIDaIOjk1VI9/E7IPjTKx.jkjPxkx2EOKSoPS
            - name: DOCS_BASE_URL
              value: https://docs.example.com
          image: mine/docs
          name: teedy-server
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: docs
      restartPolicy: Always
      volumes:
        - name: docs
          persistentVolumeClaim:
            claimName: docs
status: {}
