infra/dms-large/compose/teedy-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/ssm-user/kompose -f docker-compose.yaml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: teedy-db
  name: teedy-db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: teedy-db
status:
  loadBalancer: {}
