infra/dms-large/compose/internet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: internet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/internet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/internet: "true"
